@@ -36,10 +36,11 @@ VDR Plugin 'elvis' Revision History
 - Enabled jump (red) key in replay mode.
 - Fixed possible locking problems in fetcher.
 - Added a progress meter for fetching.
-- Added Makefile depencency for objects
+- Added Makefile depencency for objects.
 - Documented Antti Seppälä as co-author.
 
 2010-xx-xx: Version 0.0.5
 
 - Updated widget API.
-
+- Added a return back to the recordings menu after exiting
+  the player.
